bug fixes: whitespace, sorting, URLs. Attr descs.

--- a/css/pvxcode.css
+++ b/css/pvxcode.css
@@ -1,6 +1,7 @@
 /* pvxcode.css */
 /* TOOLTIPS */
-div.pvx_overlib {
+span.pvx_overlib {
+    display:block;
     position:relative;
     border:1px;
     border-color:#78796c;
@@ -12,7 +13,8 @@ div.pvx_overlib {
 }
 
 /* Tooltips - Bottom right text */
-div.pvx_campaign {
+span.pvx_campaign {
+    display:block;
     bottom:0px;
     right:-1px;
     position:absolute;
@@ -33,7 +35,8 @@ div.pvx_campaign {
 }
 
 /* Tooltips - Text after description (profession, attribute, rank) */
-div.pvx_mastery {
+span.pvx_mastery {
+    display:block;
     bottom:13px;
     left:65px;
     position:absolute;
@@ -48,7 +51,8 @@ div.pvx_mastery {
 }
 
 /* Tooltips - Skill name, type, description. */
-div.pvx_description {
+span.pvx_description {
+    display:block;
     position:relative;
     background-color:#fafaf7;
     background-repeat:no-repeat;
@@ -59,7 +63,8 @@ div.pvx_description {
     min-height:120px;
 }
 
-div.pvx_normal_skill {
+span.pvx_normal_skill {
+    display:block;
     position:relative;
     color:#252525;
     height:22px;
@@ -70,7 +75,8 @@ div.pvx_normal_skill {
     margin-top:1px;
 }
 
-div.pvx_elite_skill {
+span.pvx_elite_skill {
+    display:block;
     position:relative;
     color:#e8a400;
     height:22px;
@@ -81,7 +87,8 @@ div.pvx_elite_skill {
     margin-top:1px;
 }
 
-div.pvx_type {
+span.pvx_type {
+    display:block;
     position:relative;
     color:#757575;
     font-family:Tahoma;
@@ -90,7 +97,8 @@ div.pvx_type {
     margin-top:6px;
 }
 
-div.pvx_skill_info {
+span.pvx_skill_info {
+    display:block;
     font-family:Tahoma;
     font-size:12px;
     position:relative;
@@ -109,7 +117,8 @@ span.expert {
 }
 
 /* Tooltips - Left column - Box, icon */
-div.pvx_attrib_list {
+span.pvx_attrib_list {
+    display:block;
     position:absolute;
     background-color:#fafaf7;
     background-image:url(../images/img_skin/skillbg.jpg);
@@ -122,7 +131,8 @@ div.pvx_attrib_list {
     z-index:1000;
 }
 
-div.pvx_attrib_bg {
+span.pvx_attrib_bg {
+    display:block;
     position:absolute;
     height:126px;
     width:42px;
@@ -133,19 +143,22 @@ div.pvx_attrib_bg {
     margin-top:2px;
 }
 
-div.pvx_attrib_bg img {
+span.pvx_attrib_bg img {
     padding:1px;
     height:40px;
     width:40px;
 }
 
 #pvx_attributes {
+    display:block;
     margin:0;
     padding:0;
     padding-left:7px;
 }
 
-#pvx_attributes div {
+/* Tooltips - Left column - sacrifice, energy, overcast, recharge, activation, adrenaline. */
+#pvx_attributes span {
+    display:block;
     width:18px;
     height:18px;
     font-size:11px;
@@ -155,7 +168,6 @@ div.pvx_attrib_bg img {
     margin-top:4px;
 }
 
-/* Tooltips - Left column - sacrifice, energy, overcast, recharge, activation, adrenaline. */
 #pvx_attributes #pvx_sacr {
     background-image:url(../images/img_skin/sacrifice.gif);
     background-repeat:no-repeat;
